# py-market

./: .gitignore  README.md  alembic.ini  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
sql_alchemy/: models.py
sql_alchemy/alembic/: env.py  script.py.mako
sql_alchemy/alembic/versions/: 1eb4a428d728_create_product_table.py
src/: app.py
src/api/controllers/products/: create.py  create_test.py  routes.py
src/api/sqlite/controllers/products/: create.py  create_product_test.py  create_test.py  get_product.py  get_product_test.py  routes.py
src/data/: product_creator.py  product_finder.py
src/db/: sqlite.py
src/lib/: sqlite.py
src/models/: product.py
src/models/redis/repository/: products.py  redis_repository.py
src/models/redis/repository/interfaces/: products_repository.py
src/models/redis/settings/: connection.py
src/models/sqlite/repository/: products.py  products_test.py
src/models/sqlite/repository/interfaces/: products_repository.py
src/models/sqlite/settings/: connection.py
src/repositories/: products_repository.py
src/repositories/in_memory/: in_memory_products_repository.py
src/repositories/sqlite/: sqlite_products_repository.py
src/types/: http_response.py
src/use_cases/factories/: make_create_product_use_case.py
src/use_cases/factories/sqlite/: make_create_product_use_case.py  make_get_product_use_case.py
src/use_cases/products/: create_product.py  create_product_test.py  get_product.py  get_product_test.py
