[project]
name = ""
version = "1.0.0"
description = ""
dynamic = ["version"]
requires-python = ">= 3.9"

authors = [
    { name = "Shandryll Stéphano", email = "shandryll94@gmail.com" }
]

[project.urls]
Repository = ""

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "A",    # flake-8-builtins
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "N",    # pep8-naming
    "D",    # pydocstyle
    "E",    # pycodestyle Error
    "F",    # pyflakes
    "I",    # isort
    "PLC",  # Pylint Convetion
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle Warning
]

ignore = [
    "D100",     # undocumented-public-module
    "D101",     # undocumented-public-class
    "D104",     # undocumented-public-package
    "D107",     # undocumented-public-init
    "D203",     # one-blank-line-before-class
    "D213",     # multi-line-summary-second-line
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false
line-ending = "auto"